--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "39d4a6ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "ml_daily_val, ml_daily_test = run_machine_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
-    "ml_monthly_val, ml_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, daily_train, daily_val, daily_test, use_existing=True)"
+    "ml_monthly_val, ml_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
   },
   {
@@ -113,7 +113,18 @@
    "id": "61888e56",
    "metadata": {},
    "source": [
-    "Machine Learning Forecast with Lags:"
+    "Deep Learning Forecast:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7640e984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_daily_val, dl_daily_test = run_machine_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=False)\n",
+    "dl_monthly_val, dl_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=False)"
    ]
   }
  ],
