--- a/code/modelselection.ipynb
+++ b/code/modelselection.ipynb
@@ -3663,7 +3663,7 @@
    "source": [
     "## Deep Learning Models:\n",
     "from neuralforecast import NeuralForecast\n",
-    "from neuralforecast.models import NBEATS, DeepAR, NLinear, KAN, NHITS, RNN, LSTM\n",
+    "from neuralforecast.models import KAN, NHITS, RNN, LSTM\n",
     "from neuralforecast.losses.pytorch import MAE\n",
     "\n",
     "h_val = 365\n",
