update baseline, statistical, updated deep learning logic (could still be broken run took to long)

--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ccd3696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install --force-reinstall --no-deps torch==2.2.2 torchvision==0.17.2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ae100bfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install statsforecast mlforecast pandas polars pyarrow holidays lightgbm"
+    "# %pip install statsforecast mlforecast pandas polars pyarrow holidays lightgbm neuralforecast"
    ]
   },
   {
@@ -132,8 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_daily_val, dl_daily_test = run_machine_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=False)\n",
-    "dl_monthly_val, dl_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=False)"
+    "dl_daily_val, dl_daily_test = run_machine_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
+    "dl_monthly_val, dl_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
   }
  ],
