--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ae100bfa",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ais_python_3_12_9",
+   "display_name": "time_series",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
