--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "9ccd3696",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "ae100bfa",
    "metadata": {},
    "outputs": [],
@@ -22,25 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "e67dd9e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jonas\\anaconda3\\envs\\time_series\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from utils.constants import FREQ_DAILY, FREQ_MONTHLY, FAMILY_BASELINE, FAMILY_STATISTICAL, FAMILY_MACHINE_LEARNING, FAMILY_DEEP_LEARNING, SPLIT_VAL\n",
     "from utils.preprocessing import load_daily_data, load_monthly_data\n",
     "from utils.baseline import run_baseline_forecast_daily, run_baseline_forecast_monthly\n",
     "from utils.statistical import run_statistical_forecast_daily, run_statistical_forecast_monthly\n",
-    "from utils.machine_learning import run_machine_learning_forecast_daily, run_machine_learning_forecast_monthly"
+    "from utils.machine_learning import run_machine_learning_forecast_daily, run_machine_learning_forecast_monthly\n",
+    "from utils.deep_learning import run_deep_learning_forecast_daily, run_deep_learning_forecast_monthly\n",
+    "from utils.metrics import calculate_metrics"
    ]
   },
   {
@@ -53,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "038986b3",
    "metadata": {},
    "outputs": [],
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "d6dc6ad3",
    "metadata": {},
    "outputs": [],
@@ -99,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "f4eae8a8",
    "metadata": {},
    "outputs": [],
@@ -113,12 +107,12 @@
    "id": "ba167dfd",
    "metadata": {},
    "source": [
-    "Machine Learning Forecast:"
+    "##### Machine Learning Forecast:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "39d4a6ec",
    "metadata": {},
    "outputs": [],
@@ -132,19 +126,119 @@
    "id": "61888e56",
    "metadata": {},
    "source": [
-    "Deep Learning Forecast:"
+    "##### Deep Learning Forecast:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "7640e984",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_daily_val, dl_daily_test = run_machine_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
-    "dl_monthly_val, dl_monthly_test = run_machine_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
+    "dl_daily_val, dl_daily_test = run_deep_learning_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
+    "dl_monthly_val, dl_monthly_test = run_deep_learning_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219909c4",
+   "metadata": {},
+   "source": [
+    "### Metrics:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92357aa8",
+   "metadata": {},
+   "source": [
+    "##### Baseline Forecast:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "61d7a36d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_metrics = pd.concat([\n",
+    "    calculate_metrics(base_daily_val, FAMILY_BASELINE, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
+    "    calculate_metrics(base_monthly_val, FAMILY_BASELINE, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ee3a899",
+   "metadata": {},
+   "source": [
+    "##### Statistical Forecast:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "13f3e336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_metrics = pd.concat([\n",
+    "    calculate_metrics(statis_daily_val, FAMILY_STATISTICAL, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
+    "    calculate_metrics(statis_monthly_val, FAMILY_STATISTICAL, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd25b55",
+   "metadata": {},
+   "source": [
+    "##### Machine Learning Forecast:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "aca6360e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_metrics = pd.concat([\n",
+    "    calculate_metrics(ml_daily_val, FAMILY_MACHINE_LEARNING, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
+    "    calculate_metrics(ml_monthly_val, FAMILY_MACHINE_LEARNING, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d45e578",
+   "metadata": {},
+   "source": [
+    "##### Deep Learning Forecast:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5c508cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_metrics = pd.concat([\n",
+    "    calculate_metrics(dl_daily_val, FAMILY_DEEP_LEARNING, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
+    "    calculate_metrics(dl_monthly_val, FAMILY_DEEP_LEARNING, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda8ad88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
