--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "61d7a36d",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
     "base_metrics = pd.concat([\n",
     "    calculate_metrics(base_daily_val, FAMILY_BASELINE, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
     "    calculate_metrics(base_monthly_val, FAMILY_BASELINE, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
-    "])"
+    "]).sort_values(by=[\"MAPE\"])"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "13f3e336",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
     "stat_metrics = pd.concat([\n",
     "    calculate_metrics(statis_daily_val, FAMILY_STATISTICAL, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
     "    calculate_metrics(statis_monthly_val, FAMILY_STATISTICAL, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
-    "])"
+    "]).sort_values(by=[\"MAPE\"])"
    ]
   },
   {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "aca6360e",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
     "ml_metrics = pd.concat([\n",
     "    calculate_metrics(ml_daily_val, FAMILY_MACHINE_LEARNING, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
     "    calculate_metrics(ml_monthly_val, FAMILY_MACHINE_LEARNING, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
-    "])"
+    "]).sort_values(by=[\"MAPE\"])"
    ]
   },
   {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "5c508cce",
    "metadata": {},
    "outputs": [],
@@ -229,13 +229,472 @@
     "dl_metrics = pd.concat([\n",
     "    calculate_metrics(dl_daily_val, FAMILY_DEEP_LEARNING, FREQ_DAILY, SPLIT_VAL, use_existing=True),\n",
     "    calculate_metrics(dl_monthly_val, FAMILY_DEEP_LEARNING, FREQ_MONTHLY, SPLIT_VAL, use_existing=True)\n",
-    "])"
+    "]).sort_values(by=[\"MAPE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dda8ad88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Model",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Family",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Frequency",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Split",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "MAE",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RMSE",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MAPE",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "2f35dad7-fdbb-496f-aba2-86b10530ecdf",
+       "rows": [
+        [
+         "0",
+         "LGBMRegressor_Lag",
+         "ml",
+         "D",
+         "val",
+         "16.87542801374111",
+         "21.55513503570295",
+         "0.1560863866294753"
+        ],
+        [
+         "0",
+         "RandomForestRegressor_Lag",
+         "ml",
+         "MS",
+         "val",
+         "16.372535283171512",
+         "19.38450706086143",
+         "0.1685709197240092"
+        ],
+        [
+         "1",
+         "LinearRegression",
+         "ml",
+         "MS",
+         "val",
+         "24.084482874751217",
+         "36.63506010620723",
+         "0.1996153142085329"
+        ],
+        [
+         "1",
+         "LinearRegression",
+         "ml",
+         "D",
+         "val",
+         "26.217515534644217",
+         "35.93548395429037",
+         "0.2280999890203124"
+        ],
+        [
+         "2",
+         "LinearRegression_Lag",
+         "ml",
+         "D",
+         "val",
+         "26.480136473886706",
+         "32.78011612205057",
+         "0.2386439510247947"
+        ],
+        [
+         "2",
+         "RandomForestRegressor",
+         "ml",
+         "MS",
+         "val",
+         "26.94987598270309",
+         "35.06894215618448",
+         "0.24348674516663"
+        ],
+        [
+         "3",
+         "RandomForestRegressor",
+         "ml",
+         "D",
+         "val",
+         "27.287968846928365",
+         "34.92410317016277",
+         "0.2479141652227214"
+        ],
+        [
+         "4",
+         "LGBMRegressor",
+         "ml",
+         "D",
+         "val",
+         "27.302582424214435",
+         "34.9585944373241",
+         "0.2480375553175172"
+        ],
+        [
+         "3",
+         "LGBMRegressor",
+         "ml",
+         "MS",
+         "val",
+         "28.6767499896326",
+         "35.924924278914894",
+         "0.2649725436874263"
+        ],
+        [
+         "5",
+         "HuberRegressor_Lag",
+         "ml",
+         "D",
+         "val",
+         "38.881486672642815",
+         "43.40751438149812",
+         "0.3752128661102289"
+        ],
+        [
+         "6",
+         "RandomForestRegressor_Lag",
+         "ml",
+         "D",
+         "val",
+         "39.63253613143502",
+         "45.00614796255032",
+         "0.3868109014065519"
+        ],
+        [
+         "4",
+         "HuberRegressor",
+         "ml",
+         "MS",
+         "val",
+         "48.31550195227144",
+         "54.13783399510198",
+         "0.4536066173065551"
+        ],
+        [
+         "7",
+         "HuberRegressor",
+         "ml",
+         "D",
+         "val",
+         "49.411825465572754",
+         "55.03605095742228",
+         "0.4651507012325702"
+        ],
+        [
+         "5",
+         "LGBMRegressor_Lag",
+         "ml",
+         "MS",
+         "val",
+         "73.01920659596671",
+         "83.01818987241114",
+         "0.843964213837396"
+        ],
+        [
+         "6",
+         "HuberRegressor_Lag",
+         "ml",
+         "MS",
+         "val",
+         "112.445934958524",
+         "125.46180987796475",
+         "1.2722784944647547"
+        ],
+        [
+         "7",
+         "LinearRegression_Lag",
+         "ml",
+         "MS",
+         "val",
+         "266.005250538504",
+         "294.7007176537668",
+         "2.958339480994423"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 16
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Split</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LGBMRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>16.875428</td>\n",
+       "      <td>21.555135</td>\n",
+       "      <td>0.156086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RandomForestRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>16.372535</td>\n",
+       "      <td>19.384507</td>\n",
+       "      <td>0.168571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>24.084483</td>\n",
+       "      <td>36.635060</td>\n",
+       "      <td>0.199615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>26.217516</td>\n",
+       "      <td>35.935484</td>\n",
+       "      <td>0.228100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LinearRegression_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>26.480136</td>\n",
+       "      <td>32.780116</td>\n",
+       "      <td>0.238644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RandomForestRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>26.949876</td>\n",
+       "      <td>35.068942</td>\n",
+       "      <td>0.243487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RandomForestRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>27.287969</td>\n",
+       "      <td>34.924103</td>\n",
+       "      <td>0.247914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LGBMRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>27.302582</td>\n",
+       "      <td>34.958594</td>\n",
+       "      <td>0.248038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LGBMRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>28.676750</td>\n",
+       "      <td>35.924924</td>\n",
+       "      <td>0.264973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HuberRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>38.881487</td>\n",
+       "      <td>43.407514</td>\n",
+       "      <td>0.375213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>RandomForestRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>39.632536</td>\n",
+       "      <td>45.006148</td>\n",
+       "      <td>0.386811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HuberRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>48.315502</td>\n",
+       "      <td>54.137834</td>\n",
+       "      <td>0.453607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>HuberRegressor</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>D</td>\n",
+       "      <td>val</td>\n",
+       "      <td>49.411825</td>\n",
+       "      <td>55.036051</td>\n",
+       "      <td>0.465151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LGBMRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>73.019207</td>\n",
+       "      <td>83.018190</td>\n",
+       "      <td>0.843964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HuberRegressor_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>112.445935</td>\n",
+       "      <td>125.461810</td>\n",
+       "      <td>1.272278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>LinearRegression_Lag</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>val</td>\n",
+       "      <td>266.005251</td>\n",
+       "      <td>294.700718</td>\n",
+       "      <td>2.958339</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Model Family Frequency Split         MAE        RMSE  \\\n",
+       "0          LGBMRegressor_Lag     ml         D   val   16.875428   21.555135   \n",
+       "0  RandomForestRegressor_Lag     ml        MS   val   16.372535   19.384507   \n",
+       "1           LinearRegression     ml        MS   val   24.084483   36.635060   \n",
+       "1           LinearRegression     ml         D   val   26.217516   35.935484   \n",
+       "2       LinearRegression_Lag     ml         D   val   26.480136   32.780116   \n",
+       "2      RandomForestRegressor     ml        MS   val   26.949876   35.068942   \n",
+       "3      RandomForestRegressor     ml         D   val   27.287969   34.924103   \n",
+       "4              LGBMRegressor     ml         D   val   27.302582   34.958594   \n",
+       "3              LGBMRegressor     ml        MS   val   28.676750   35.924924   \n",
+       "5         HuberRegressor_Lag     ml         D   val   38.881487   43.407514   \n",
+       "6  RandomForestRegressor_Lag     ml         D   val   39.632536   45.006148   \n",
+       "4             HuberRegressor     ml        MS   val   48.315502   54.137834   \n",
+       "7             HuberRegressor     ml         D   val   49.411825   55.036051   \n",
+       "5          LGBMRegressor_Lag     ml        MS   val   73.019207   83.018190   \n",
+       "6         HuberRegressor_Lag     ml        MS   val  112.445935  125.461810   \n",
+       "7       LinearRegression_Lag     ml        MS   val  266.005251  294.700718   \n",
+       "\n",
+       "       MAPE  \n",
+       "0  0.156086  \n",
+       "0  0.168571  \n",
+       "1  0.199615  \n",
+       "1  0.228100  \n",
+       "2  0.238644  \n",
+       "2  0.243487  \n",
+       "3  0.247914  \n",
+       "4  0.248038  \n",
+       "3  0.264973  \n",
+       "5  0.375213  \n",
+       "6  0.386811  \n",
+       "4  0.453607  \n",
+       "7  0.465151  \n",
+       "5  0.843964  \n",
+       "6  1.272278  \n",
+       "7  2.958339  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml_metrics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda8ad88",
+   "id": "29a57f76",
    "metadata": {},
    "outputs": [],
    "source": []
