--- a/code/visualization.ipynb
+++ b/code/visualization.ipynb
@@ -165,19 +165,11 @@
     "plt.savefig('../results/visualizations/electricity_prices_heatmap.png', dpi=300, bbox_inches='tight')    \n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ddd62ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AIS3_TIS",
+   "display_name": "AIS",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
