--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -25,7 +25,29 @@
    "execution_count": 3,
    "id": "e67dd9e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karim\\anaconda3\\envs\\ais_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-12-30 19:12:04,127\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-12-30 19:12:04,318\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "f-string: unmatched '[' (visualizations.py, line 63)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
+      "  File \u001b[92mc:\\Users\\karim\\anaconda3\\envs\\ais_env\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3549\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom utils.visualizations import plot_forecasts, plot_residuals\u001b[39m\n",
+      "  \u001b[36mFile \u001b[39m\u001b[32mc:\\Hagenberg\\Nextcloud\\Hagenberg\\3. Semester_Karim\\TIS3\\Project\\TIS3_CapstoneProject\\code\\utils\\visualizations.py:63\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlabel=f\"{i+1}: {model_name} (freq: {model[\"frequency\"]}, family: {model[\"family\"]})\",\u001b[39m\n                                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: unmatched '['\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "038986b3",
    "metadata": {},
    "outputs": [],
@@ -78,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d6dc6ad3",
    "metadata": {},
    "outputs": [],
@@ -97,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f4eae8a8",
    "metadata": {},
    "outputs": [],
@@ -116,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "39d4a6ec",
    "metadata": {},
    "outputs": [],
@@ -135,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7640e984",
    "metadata": {},
    "outputs": [],
@@ -162,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "61d7a36d",
    "metadata": {},
    "outputs": [],
@@ -183,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "13f3e336",
    "metadata": {},
    "outputs": [],
@@ -204,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "aca6360e",
    "metadata": {},
    "outputs": [],
@@ -225,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5c508cce",
    "metadata": {},
    "outputs": [],
@@ -246,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "dda8ad88",
    "metadata": {},
    "outputs": [],
@@ -256,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0a2e37de",
    "metadata": {},
    "outputs": [],
@@ -267,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0a11a3b7",
    "metadata": {},
    "outputs": [],
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7a513652",
    "metadata": {},
    "outputs": [
@@ -329,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5e9840f5",
    "metadata": {},
    "outputs": [
@@ -350,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4e279fd0",
    "metadata": {},
    "outputs": [
@@ -379,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "df83cc07",
    "metadata": {},
    "outputs": [
@@ -408,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5013533f",
    "metadata": {},
    "outputs": [
@@ -444,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ca336960",
    "metadata": {},
    "outputs": [
@@ -468,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c0ea3d46",
    "metadata": {},
    "outputs": [
@@ -909,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5fcb1653",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "time_series",
+   "display_name": "ais_env",
    "language": "python",
    "name": "python3"
   },
@@ -1163,7 +1185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
